Fixade semantic html kod, kod är utan error eller warning på valditor och ändrade footer spacing

--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@ footer {
   background-color: black;
   color: white;
   justify-content: center;
-  margin-top: auto;
+  margin-bottom: 1.5em;
+  padding: 2em;
   p,
   address {
     font-size: 0.8em;
@@ -358,7 +359,7 @@ header {
 }
 
 .hero-text-title {
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
   margin-top: 2em;
 }
 .hero-text {
@@ -398,7 +399,7 @@ header {
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     gap: 4em;
-
+    padding: 0 1.5em 1.5em 1.5em;
     margin-top: 1em;
   }
 
@@ -431,7 +432,7 @@ header {
 
   /* ----------- Event kort ----------- */
   .event-title {
-    max-width: 100%;
+    max-width: 90%;
     margin: 0 auto;
   }
 
@@ -443,7 +444,7 @@ header {
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     gap: 4em;
-
+    padding: 0 1.5em 1.5em 1.5em;
     margin-top: 1em;
   }
 
@@ -522,12 +523,8 @@ header {
   .hero-text {
     font-size: 1.2em;
   }
-  .hero-text-title {
-    margin-bottom: 1em;
-    margin-top: -5em;
-    }
   .hero {
-    margin-top: -4em;
+    margin-top: -3em;
     img {
       height: fit-content;
     }
@@ -549,5 +546,9 @@ header {
     position: absolute;
     display: block;
     margin-right: -70%;
+  }
+  .hero-text-title {
+    margin-bottom: 1em;
+    margin-top: .1em;
   }
 }
